# music-graph

./: README.md  main.py  pyproject.toml
common/util/: __init__.py
config/: base.py
graph/: db.py
graph/data_access/: artist.py  release.py  util.py
graph/models/: artist.py  base_model.py  genre.py  label.py  release.py  song.py  track.py
rest/: __init__.py  util.py
rest/service/: artist.py  release.py
rest/v0/schema/: artist.py  genre.py  label.py  release.py  song.py
server/: app_init.py  rebar.py  register_handlers.py
server/handlers/: artist_handler.py  hello_world.py  release_handler.py
server/rest/v0/schema/: artist.py  genre.py  label.py  release.py  song.py
