[tool.poetry]
name = "music-graph"
version = "0.1.0"
description = ""
authors = ["aebrow4 <aebrownz11@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
neomodel = "^3.3"
flask = "^1.0"
py2neo = "^4.3"
neo4j = "^1.7"
flask-rebar = "^1.10.0"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0",allows-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
